# 15.C57-final-project

./: .gitignore  README.md  pyproject.toml
data/Boston/: mbta_communities.xlsx
data/adj_matrix/: adj_matrix_0_1.xlsx  adj_matrix_1.xlsx  adj_matrix_10.xlsx  adj_matrix_100.xlsx  adj_matrix_5.xlsx  adj_matrix_50.xlsx
eraft/: metrics.py  pyproject.toml
eraft/data_structures/: graph.py
eraft/graph_generation/: problem_graph_generator.py
erna/: pyproject.toml  requirements.txt
erna/constants/: gtfs_network_types.py
erna/data/: graph.py
erna/erna/data/: graph.py
erna/erna/graph_generation/utils/: graph_expansion.py
erna/erna/optimization/: STOCHASTIC_shortest_path_multi_path_simple_interdiction_weighted_paths.py  STOCHASTIC_shortest_path_multi_path_simple_interdiction_weighted_paths_det.py  STOCHASTIC_wait_and_see.py  shortest_path_dual_multi_path.py  shortest_path_dual_multi_path_simple_interdiction.py  shortest_path_dual_simple_interdiction.py  shortest_path_multi_path_fixed_interdiction_weighted_paths.py
erna/erna/toy_data/: toy_graph_1.py  toy_graph_2.py  x_vars_1_0_det.npy
erna/graph_generation/: gtfs_graph_generator.py  osm_graph_generation.py  problem_graph_generator.py
erna/previous_formulations/: full_formulation.py  shortest_path_dual.py  shortest_path_dual_multi_path_simple_interdiction_weighted_paths.py  shortest_path_dual_simple_interdiction_weighted_paths.py  shortest_path_multi_path.py  shortest_path_multi_path_simple_interdiction_weighted_paths.py  stochastic_approximation.py
erna/toy_data/: toy_graph_1.py
erna/utils/: solution_logging.py
img/: toy_graph.drawio
notebooks/: census_data_preparation.ipynb  data_prep.ipynb  flooding_matrix.ipynb  graph_gen.py  map_visualization.ipynb  problem_formulation.ipynb  stochastic_check.ipynb
reference_code/: non_stochastic_example.jl  ps3_fiorista.ipynb  shortest_path_interdiction.jl
scripts/: STOCHASTIC_shortest_path_multi_path_simple_interdiction_weighted_paths.py  comparison_run.py  deterministi_model_run.py  stochastic_model_run.py  wait_and_see_model_run.py
(+20 files in other folders)
