[tool.poetry]
name = "ernp"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
gurobipy = "^11.0.3"
jupyterlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
