[tool.poetry]
name = "erna"
version = "0.1.0"
description = ""
authors = ["Riccardo Fiorista", "Yunwei Hu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
networkx = "^3.1"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
gurobipy = "10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
